<resources>
    <string name="app_name">Pepes Mathschool</string>
    <string name="title">MATEMATIKK</string>
    <string name="gameStartText">Start spill</string>
    <string name="gameStatsText">Statistikk</string>
    <string name="gameOptionsText">Preferanser</string>

    // Verdier til kalkulatoren
    <string name="calcBtn1">1</string>
    <string name="calcBtn2">2</string>
    <string name="calcBtn3">3</string>
    <string name="calcBtn4">4</string>
    <string name="calcBtn5">5</string>
    <string name="calcBtn6">6</string>
    <string name="calcBtn7">7</string>
    <string name="calcBtn8">8</string>
    <string name="calcBtn9">9</string>
    <string name="calcBtn0">0</string>
    <string name="calcBtnOK">OK</string>

    // Verdier til settings
    <string name="changeDiff"><u>Antall spørsmål</u></string>
    <string name="changeLanguage"><u>Endre språk</u></string>
    <string name="changeLocaleNO">Norsk</string>
    <string name="changeLocaleDE">Tysk</string>
    <string name="easymode">Lett (5)</string>
    <string name="mediummode">Medium (10)</string>
    <string name="hardmode">Vanskelig (25)</string>
    <string name="languageNO">en</string>
    <string name="languageDE">de</string>

    //Verdier til newgame
    <string name="textQuestion">Spørsmål</string>
    <string name="finishText">Gratulerer! Spill på nytt?</string>
    <string name="wrongAnswer">Ops! Feil svar!</string>
    <string name="correctAnswer">Yeah! Korrekt!</string>
    <string name="dialogYes">Ja</string>
    <string name="dialogNo">Nei</string>
    <string name="newGameStarted">Nytt spill startet!</string>
    <string name="quitGame">Avslutt spill?</string>

    //Verdier til stats
    <string name="btnClearStats">Nullstill</string>
    <string name="stats_text1"><u>Statistikk</u></string>
    <string name="stats_points">Riktig:</string>
    <string name="stats_fails">Feil:</string>
    <string name="stats_tips">Ikke dårlig! Fortsett sånn!</string>
    <string name="stats_fail_tips">Øvelse gjør mester! Ikke gi opp!</string>
    <string name="stats_default_text">Statistikk gir god oversikt over progresjon!</string>


</resources>
