<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".NewGame">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        android:background="@color/navbar_color"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <TextView
        android:id="@+id/textQuestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/my_toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:text="@string/textQuestion"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:background="@drawable/textborder"/>

    <TextView
        android:id="@+id/mathQuestionTextView"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textQuestion"
        android:paddingLeft="5dp"
        android:text="her"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/answerBox"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/mathQuestionTextView"
        android:layout_alignParentEnd="true"
        android:backgroundTint="@color/black"
        android:maxLength="3"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <Button
        android:textSize="27sp"
        android:id="@+id/btn_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/btn_5"
        android:layout_centerHorizontal="true"
        android:text="@string/calcBtn2"
        android:background="@drawable/button_shape"/>

    <Button
        android:textSize="27sp"
        android:id="@+id/btn_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/btn_2"
        android:layout_above="@+id/btn_4"
        android:background="@drawable/button_shape"
        android:text="@string/calcBtn1" />

    <Button
        android:textSize="27sp"
        android:id="@+id/btn_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_6"
        android:layout_toEndOf="@+id/btn_2"
        android:layout_centerHorizontal="true"
        android:text="@string/calcBtn3"
        android:background="@drawable/button_shape"/>

    <Button
        android:textSize="27sp"
        android:id="@+id/btn_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_7"
        android:layout_toStartOf="@+id/btn_2"
        android:layout_centerHorizontal="true"
        android:text="@string/calcBtn4"
        android:background="@drawable/button_shape"/>

    <Button
        android:textSize="27sp"
        android:id="@+id/btn_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_8"
        android:layout_toEndOf="@+id/btn_4"
        android:layout_centerHorizontal="true"
        android:text="@string/calcBtn5"
        android:background="@drawable/button_shape"/>

    <Button
        android:textSize="27sp"
        android:id="@+id/btn_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_9"
        android:layout_toEndOf="@+id/btn_5"
        android:layout_centerHorizontal="true"
        android:text="@string/calcBtn6"
        android:background="@drawable/button_shape"/>

    <Button
        android:textSize="27sp"
        android:id="@+id/btn_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_clear"
        android:layout_toStartOf="@+id/btn_5"
        android:layout_centerHorizontal="true"
        android:text="@string/calcBtn7"
        android:background="@drawable/button_shape"/>

    <Button
        android:textSize="27sp"
        android:id="@+id/btn_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_0"
        android:layout_toEndOf="@+id/btn_7"
        android:layout_centerHorizontal="true"
        android:text="@string/calcBtn8"
        android:background="@drawable/button_shape"/>

    <Button
        android:textSize="27sp"
        android:id="@+id/btn_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_ok"
        android:layout_toEndOf="@+id/btn_8"
        android:layout_centerHorizontal="true"
        android:text="@string/calcBtn9"
        android:background="@drawable/button_shape"/>

    <ImageButton
        android:id="@+id/btn_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/btn_8"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/delete_icon_button"
        android:background="@drawable/clear_button"/>

    <Button
        android:textSize="27sp"
        android:id="@+id/btn_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/btn_clear"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/calcBtn0"
        android:background="@drawable/button_shape"/>

    <ImageButton
        android:id="@+id/btn_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/btn_0"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:src="@drawable/done_icon_button"
        android:background="@drawable/ok_button"/>

</RelativeLayout>